plugins/impex/libkra/kis_kra_loader.h
@@ -66,6 +66,12 @@ public:
     /// if not empty, loading didn't fail, but there are problems
     QStringList warningMessages() const;
 
+    /// Returns the name of the image as defined in maindoc.xml. This might
+    /// be different from the name of the image as used in the path to the
+    /// layers, because before Krita 4.2, under some circumstances, this
+    /// string is in utf8, but the paths were stored in a different encoding.
+    QString imageName() const;
+
 private:
 
     // this needs to be private, for neatness sake
